Now hiding placeholder on focus for input. Fixing spacing and cutoff issues in the message input.

--- a/src/assets/sass/chat.scss
+++ b/src/assets/sass/chat.scss
@@ -372,7 +372,7 @@
 
   .cs-new-message-wrapper {
     height: 40px;
-    padding: 8px 55px 8px 10px;
+    padding: 10px 55px 8px 10px;
     background-color: black;
 
     textarea {
